--- a/client/src/App.css
+++ b/client/src/App.css
@@ -249,6 +249,7 @@ img {
 .form input[type='email'],
 .form input[type='password'],
 .form input[type='date'],
+.form input[type='file'],
 .form select,
 .form textarea {
   display: block;
